fixed issue with fullbleed tile version

--- a/app/less/blog-post-list.less
+++ b/app/less/blog-post-list.less
@@ -40,8 +40,8 @@
     background-color: @black;
   }
 
-  &.img-full-bleed {
-    background-size: contain;
+  &.img-fullbleed {
+    background-size: cover;
   background-position: center center;
   }
 }
